# unfolder

./: .gitignore  CMakeLists.txt  README.md
libs/GL/: glui.h
libs/itree/: EndPoint.cpp  EndPoint.h  Interval.cpp  Interval.h  MiddleStructure.h  RectKD.cpp  RectKD.h  RectangleTree.h
models/: hand-336.off  knot-480.off  sphere-042.off  squirtle-1718.off  star-024.off  star-4split.off  star-9split.off  star-Butterfly.off  star-Loop.off  star-PNSplit.off  star-Sqrt3.off  table.off  tiger-112.off
src/: CMakeLists.txt  OverlappingChecker.cpp  OverlappingChecker.h  Splitter.cpp  Splitter.h  config.h  draw.h  intersection.h  main.cpp  main.h  model.cpp  model.h  objReader.h  unfolder.cpp  unfolder.h
src/GL/: CMakeLists.txt  gli.cpp
src/mathtool/: Basic.h  Box.cpp  Box.h  CMakeLists.txt  DualQuaternion.h  Geometry.cpp  Quaternion.h  Vector.h
src/modelgraph/: CMakeLists.txt  ModelEdge.h  ModelGraph.cpp
src/util/: CMakeLists.txt
your-report/: README.txt  report.bbl  report.bib  report.blg  report.tex
your-report/FIGS/convex/: convert.bat
your-report/FIGS/nonconvex/: convert.bat
your-report/FIGS/s/: convert.bat
